--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ let scarModel;
 
 const loader = new GLTFLoader();
 loader.load(
-    'scar.glb',
+    'Weapon_Scar.glb',
     function (gltf) {
         scarModel = gltf.scene;
         scene.add(scarModel);
